/*
 * Copyright 2023 Tomshley LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.

 * @author Thomas Schena @sgoggles <https://github.com/sgoggles> | <https://gitlab.com/sgoggles>
 */
syntax = "proto3";

import "google/protobuf/wrappers.proto";

package com.tomshley.brands.global.tech.tware.products.hexagonal.examples.hellogrpc;

/*
 * Returns a greeting for the given person optionally including a custom message.
 */
service HelloWorld {
  rpc SayHello(ToBeGreeted) returns (Greeting) {}
}

message ToBeGreeted {
  message Person {
    string name = 1;
  }

  Person person = 1;
  google.protobuf.StringValue msg = 2;
}

message Greeting {
  string message = 1;
}
